@@ -946,5 +946,16 @@ u ^OK :child-!: \r\n$
 w exit
 !
 
+mkdir -p "$tmp/foo bar"
+((SHOPT_VSH || SHOPT_ESH)) && tst $LINENO <<!
+L tab completion with space in string
+
+d 15
+p :test-1:
+w echo $tmp/foo\\\\ \\t
+r ^:test-1: echo $tmp/foo\\\\ bar/\\r\\n$
+r ^$tmp/foo bar/\\r\\n$
+!
+
 # ======
 exit $((Errors<125?Errors:125))
