@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-01-04:
+
+- Fixed an issue in vi mode that caused tab completion to fail if the
+  last character on the command line was a space.
+
 2021-12-28:
 
 - Fixed a bug that caused CDPATH to continue working after unsetting it.
